Fix small copy component on tablet

--- a/assets/scss/organisms/text/_small-copy.scss
+++ b/assets/scss/organisms/text/_small-copy.scss
@@ -27,6 +27,10 @@
         margin-right: 24px;
 
         @include breakpoint(medium down) {
+            width: 45%;
+        }
+
+        @include breakpoint(small only) {
             width: 100%;
         }
 
